--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,90 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+body {
+    //background-color: #BDCAD5;
+}
+
+#page-bg {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    //height: 100%;
+    //background-color: #BDCAD5;
+    z-index: -1;
+}
+
+.bg3 {
+    //background-color: transparent;
+    //background-image: -webkit-radial-gradient(10% 10%, ellipse farthest-side, #E0E7D8 0%, #94B3BE 90%, #668A9D 135%);
+    //background-image: -moz-radial-gradient(10% 10%, ellipse farthest-side, #E0E7D8 0%, #94B3BE 90%, #668A9D 135%);
+    //background-image: radial-gradient(10% 10%, ellipse farthest-side, #E0E7D8 0%, #94B3BE 90%, #668A9D 135%);
+    //background-position: top left;
+    //background-repeat: repeat;
+}
+
+body, html {
+    height: 100%;
+    font-size: 14px;
+    margin: 0 auto;
+    //background: url('assets/white-waves.png') repeat;
+}
+
+.main-realestate {
+    text-align: center;
+    margin: 20px 0 50px 0;
+        
+    h1 {
+        color: #666;
+        font-size: 48px;
+        
+    }
+}
+
+span.hutch {
+    color: #000 !important;
+    font-size: 72px !important;
+}
+
+
+body {
+    font-family: 'Montserrat';
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 1.3em;
+    display: grid;
+    grid-template-columns: 30% auto;
+
+    a {
+        color: white;
+    }
+}
+
+section {
+    width: 80%;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 2em;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+$indigo: #3f51b5;
+
+.indigo {
+    color: $indigo;
+}
